# Guerledan-projet-gonio

./: .gitignore  README.md  TUTO_PERSO.md  connect_to_robot.txt  gonio_ros_structure.drawio
docker_ros_bridge/: Dockerfile  bilan_docker_20-01-25.txt  docker_creation_instructions.md  launch_docker.md  launch_docker.txt  launch_n_use_docker.md  run.bash  tuto_ros1_bridge.txt
docker_ros_bridge/app/: os1_surcouf.json  start_replay_bridge.sh  start_runtime_bridge.sh
docker_ros_bridge/docker_ros_packages/ros1/convert_dvl_to_common/: CMakeLists.txt  package.xml
docker_ros_bridge/docker_ros_packages/ros1/convert_dvl_to_common/src/: convert_dvl_to_common.py
docker_ros_bridge/docker_ros_packages/ros1/convert_sbg_to_common/: CMakeLists.txt  package.xml
docker_ros_bridge/docker_ros_packages/ros1/convert_sbg_to_common/src/: convert_sbg_to_common.py
gonio_contractor_py/: gonio_codac1.py  gonio_v3.py  gonio_v3_2.py  gonio_v4.py  gonio_v4_2.py  main.py  online_simu_chatgpttttt.py  test.py  test_evolvingTube.py  tube_chatgpt.py  tube_chatgpt_2.py  tube_online_devel.py  tube_qui_marche.py  tube_v1.py  tube_v2.py
packages_ros2/interval_analysis_interfaces/: CMakeLists.txt
packages_ros2/python_simulator/: boat.py  buoy.py  simulation_runner.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/get_intervals/: package.xml  setup.cfg  setup.py
ros2_ws/src/gonio_python_simu_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/interval_analysis_interfaces/: CMakeLists.txt
simulator/: boat.py  buoy.py  calcul_tools.py  island.py  roblib.py  sea_object.py  simulation_runner.py  test_arc.py
(+142 files in other folders)
